<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/map"
        android:icon="@drawable/ic_menu"
        android:title="@string/map_selection">
        <menu>
            <group>
                <item android:title="@string/_2d">
                    <menu>
                        <group>
                            <item android:id="@+id/ebc2D" android:title="@string/ebc_colombes" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                            <item android:id="@+id/brest2D"  android:title="@string/brest" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                            <item android:id="@+id/buenosaires2D"  android:title="@string/buenos_aires" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                            <item android:id="@+id/ibm2D"  android:title="@string/ibm" android:onClick="changeMap" android:checkable="true" android:icon="@mipmap/logo_ibm"/>
                        </group>
                    </menu>
                </item>
                <item android:title="@string/_3d">
                    <menu>
                        <item android:id="@+id/brest3D"  android:title="@string/brest" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                        <item android:id="@+id/ebc3D" android:title="@string/ebc_colombes" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                        <item android:id="@+id/transportation3D" android:title="@string/transportation" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                        <item android:id="@+id/hospitality3D" android:title="@string/hospitality" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                        <item android:id="@+id/healthcare3D" android:title="@string/healthcare" android:checkable="true" android:onClick="changeMap" android:icon="@mipmap/logo_ale"/>
                    </menu>
                </item>
            </group>
        </menu>
    </item>
    <item android:id="@+id/debug"
        android:title="@string/settings">
        <menu>
            <item android:id="@+id/debugActivity" android:title="@string/rainbow" android:onClick="toDebugActivity"/>
        </menu>
    </item>
    <item android:id="@+id/tracking" android:title="@string/tracking" android:checkable="true" android:onClick="toPeopleTracking"/>
    <item android:id="@+id/exit" android:title="@string/exit" android:onClick="toExit"/>

</menu>